--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <body>
   <div>
 <p style="text-align: center;"><strong>ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ ДЛЯ МОБИЛЬНОГО ПРИЛОЖЕНИЯ</strong></p>
-<p style="text-align: center;"><strong>"<span id="span_id_название_приложения">Табло аэропорта Астрахань</span>"</strong></p>
-    <p>Сергей Смирнов создал бесплатное приложение ru.aboutnizhnynovgorod.dumptyhumpty2014.tabloasf (Приложение). Данная УСЛУГА предоставляется Сергеем Смирновым бесплатно и предназначена для использования «как есть».</p> 
+<p style="text-align: center;"><strong>"<span id="span_id_название_приложения">Табло аэропорта Кемерово</span>"</strong></p>
+    <p>Сергей Смирнов создал бесплатное приложение ru.aboutnizhnynovgorod.dumptyhumpty2014.tablokej (Приложение). Данная УСЛУГА предоставляется Сергеем Смирновым бесплатно и предназначена для использования «как есть».</p> 
     <p>Эта страница используется для информирования посетителей о политике в отношении сбора, использования и раскрытия Личной информации, если кто-то решил использовать Приложение.</p>
     <p>Если вы решите использовать Приложение, вы соглашаетесь на сбор и использование информации в отношении этой политики. Личная информация, которую я собираю, используется для предоставления и улучшения сервиса. Я не буду использовать или передавать вашу информацию кому-либо, кроме случаев, описанных в настоящей Политике конфиденциальности.</p>
  <p style="text-align: center;"><strong>Сбор и использование информации</strong></p>
